v5.0.0/llms/components/ix-menu-about-news.md
# ix-menu-about-news

> No component summary available.

## Documentation

- https://ix.siemens.io//docs/components/popover-news/guide.md

## Figma IDs

- None

## Related examples

- popover-news
  - angular: [../../examples/angular-examples/src/preview-examples/popover-news.html](../../examples/angular-examples/src/preview-examples/popover-news.html), [../../examples/angular-examples/src/preview-examples/popover-news.ts](../../examples/angular-examples/src/preview-examples/popover-news.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/popover-news.html](../../examples/angular-standalone-examples/src/preview-examples/popover-news.html), [../../examples/angular-standalone-examples/src/preview-examples/popover-news.ts](../../examples/angular-standalone-examples/src/preview-examples/popover-news.ts)
  - html: [../../examples/html-examples/src/preview-examples/popover-news.html](../../examples/html-examples/src/preview-examples/popover-news.html)
  - react: [../../examples/react-examples/src/preview-examples/popover-news.tsx](../../examples/react-examples/src/preview-examples/popover-news.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/popover-news.vue](../../examples/vue-examples/src/preview-examples/popover-news.vue)

## Related blocks

- unavailable (not present in registry JSON)

## Properties

- `aboutItemLabel`; attr: `about-item-label`; type: `string | undefined` - Subtitle of the about news
- `activeAboutTabKey`; attr: `active-about-tab-key`; type: `string | undefined` - Defines which tab should be active, used when the about news is used in combination with ix-menu-about
- `i18nShowMore`; attr: `i18n-show-more`; type: `string`; default: `'Show more'` - i18n label for 'Show more' button
- `label`; attr: `label`; type: `string | undefined` - Title of the about news
- `show`; attr: `show`; type: `boolean`; default: `false` - Show about news

## Events

- `closePopover` - Popover closed
- `showMore` - Show More button is pressed

## Slots

- None
