v5.2.0/llms/components/ix-menu-about-news.md
# ix-menu-about-news

> News panel shown within the application menu.

## Documentation

- https://ix.siemens.io//docs/components/popover-news/guide.md

## Figma IDs

- None

## Related examples

Example source links are relative to this Markdown file.

- popover-news
  - angular:
    - `angular/popover-news.html`: [source](../../examples/angular-examples/src/preview-examples/popover-news.html)
    - `angular/popover-news.ts`: [source](../../examples/angular-examples/src/preview-examples/popover-news.ts)
  - angular-standalone:
    - `angular-standalone/popover-news.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/popover-news.html)
    - `angular-standalone/popover-news.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/popover-news.ts)
  - html:
    - `html/popover-news.html`: [source](../../examples/html-examples/src/preview-examples/popover-news.html)
  - react:
    - `react/popover-news.tsx`: [source](../../examples/react-examples/src/preview-examples/popover-news.tsx)
  - vue:
    - `vue/popover-news.vue`: [source](../../examples/vue-examples/src/preview-examples/popover-news.vue)

## Related blocks

- unavailable (not present in registry JSON)

## Properties

- `aboutItemLabel`; attr: `about-item-label`; type: `string | undefined` - Subtitle of the about news
- `activeAboutTabKey`; attr: `active-about-tab-key`; type: `string | undefined` - Defines which tab should be active, used when the about news is used in combination with ix-menu-about
- `i18nShowMore`; attr: `i18n-show-more`; type: `string`; default: `'Show more'` - i18n label for 'Show more' button
- `label`; attr: `label`; type: `string | undefined` - Title of the about news
- `show`; attr: `show`; type: `boolean`; default: `false` - Show about news

## Events

- `closePopover` - Popover closed
- `showMore` - Show More button is pressed

## Slots

- `` - About news content.
